force-app/main/default/objects/NI_Admin_KB_Article__c/NI_Admin_KB_Article__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-006767

NI Salesforce Admin App - Knowledge Base Object.
Used for Salesforce related knowledge base articles pertaining to the Newmarket Salesforce Business Org</description>
    <label>SF Knowledge Base</label>
    <nameField>
        <displayFormat>KB-{000000}</displayFormat>
        <label>KB Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF Knowledge Base</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>