force-app/main/default/objects/NI_Admin_KB_Article__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex Class</fullName>
            </value>
            <value>
                <fullName>Apex Trigger</fullName>
            </value>
            <value>
                <fullName>Standard Apex Test Class</fullName>
            </value>
            <value>
                <fullName>Validation Rule</fullName>
            </value>
            <value>
                <fullName>Visualforce Page</fullName>
            </value>
            <value>
                <fullName>Workflow Rule</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
            <value>
                <fullName>Code Snippet</fullName>
            </value>
            <value>
                <fullName>General Article</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Formula</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>