force-app/main/default/objects/NI_Admin_KB_Article__c/fields/Code_Example__c.field-meta.xml
<CustomField>
    <fullName>Code_Example__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Code Example</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>