force-app/main/default/objects/NI_Admin_KB_Article__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>