force-app/main/default/objects/NI_Admin_KB_Article__c/fields/Existing_Example__c.field-meta.xml
<CustomField>
    <fullName>Existing_Example__c</fullName>
    <description>Link to an existing example of the KB Article</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Link to an existing example of the KB Article</inlineHelpText>
    <label>Existing Example</label>
    <type>Url</type>
</CustomField>