force-app/main/default/objects/NI_Admin_KB_Article__c/recordTypes/Administration.recordType-meta.xml
<RecordType>
    <fullName>Administration</fullName>
    <active>true</active>
    <description>Record type used for general Salesforce adminstration topics</description>
    <label>Administration</label>
</RecordType>