force-app/main/default/objects/NI_Admin_KB_Article__c/recordTypes/Development.recordType-meta.xml
<RecordType>
    <fullName>Development</fullName>
    <active>true</active>
    <description>Record type used for Salesforce development topics</description>
    <label>Development</label>
</RecordType>