force-app/main/default/objects/NI_Admin_KB_Article__c/validationRules/Salesforce_App.validationRule-meta.xml
<ValidationRule>
    <fullName>Salesforce_App</fullName>
    <active>true</active>
    <description>Salesforce App field is required</description>
    <errorConditionFormula>ISBLANK(Salesforce_App__c)</errorConditionFormula>
    <errorDisplayField>Salesforce_App__c</errorDisplayField>
    <errorMessage>You must select a Salesforce App for this KB Article</errorMessage>
</ValidationRule>