force-app/main/default/objects/NI_Admin_KB_Article__c/listViews/All_KB_Articles.listView-meta.xml
<ListView>
    <fullName>All_KB_Articles</fullName>
    <columns>Salesforce_App__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Category__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All KB Articles</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>