force-app/main/default/objects/NI_Admin_KB_Article__c/listViews/Apttus_KB_Articles.listView-meta.xml
<ListView>
    <fullName>Apttus_KB_Articles</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Category__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesforce_App__c</field>
        <operation>includes</operation>
        <value>Apttus</value>
    </filters>
    <label>Apttus KB Articles</label>
    <sharedTo>
        <group>NISFDCSysAdmin</group>
    </sharedTo>
</ListView>