force-app/main/default/objects/NI_Admin_KB_Article__c/listViews/Code_Snippets.listView-meta.xml
<ListView>
    <fullName>Code_Snippets</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Code Snippet</value>
    </filters>
    <label>Code Snippets</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>