force-app/main/default/objects/NI_Admin_KB_Article__c/listViews/FinancialForce_PSA.listView-meta.xml
<ListView>
    <fullName>FinancialForce_PSA</fullName>
    <columns>Salesforce_App__c</columns>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Category__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesforce_App__c</field>
        <operation>equals</operation>
        <value>FinancialForce - PSA</value>
    </filters>
    <label>FinancialForce - PSA</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>