force-app/main/default/objects/NI_Admin_KB_Article__c/listViews/My_Articles.listView-meta.xml
<ListView>
    <fullName>My_Articles</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Category__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Articles</label>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>