force-app/main/default/objects/NI_Admin_KB_Article__c/listViews/Template_Articles.listView-meta.xml
<ListView>
    <fullName>Template_Articles</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Template</value>
    </filters>
    <label>Template Articles</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>